--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   crop_your_image: ^2.0.0
   path_provider: ^2.1.1
   shared_preferences: ^2.2.2
+  package_info_plus: ^8.0.0
+  url_launcher: ^6.2.1
+  permission_handler: ^11.1.0
 
 dev_dependencies:
   flutter_test:
