--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   google_fonts: ^6.1.0
   firebase_core: ^3.3.0
   firebase_auth: ^5.1.4
+  firebase_storage: ^12.1.3
   cloud_firestore: ^5.2.1
   image_picker: ^1.0.4
   crop_your_image: ^2.0.0
