GameLog v1.1.0 - Major Performance & Feature Update
 New Features:
- Complete IGDB API integration (replaced RAWG)
- Google Play Store inspired homepage UI
- Personalized game recommendations based on user library
- Enhanced forum system with admin controls
- Dynamic date handling (2026 current year support)
- Improved image quality system with multiple resolutions

 Performance Optimizations:
- Fixed CategoryGamesScreen overflow issues
- Added loading state protection to prevent multiple API calls
- Updated deprecated Switch widgets for better performance
- Removed unused imports and variables (11 critical issues fixed)
- Font tree-shaking enabled (99.1% MaterialIcons reduction)
- Enhanced caching system with current year support

 UI/UX Improvements:
- Compact homepage layout with carousel featured games
- Theme-aware components throughout the app
- Better aspect ratios and layout constraints
- Notification bell with badge in header
- Enhanced game cards with proper image sizing

 Bug Fixes:
- Resolved duplicate games issue with quality scoring
- Fixed search functionality (removed conflicting sort/search)
- Corrected genre names to match IGDB format
- Fixed popular games to show recent titles (2023-2026)
- Improved error handling and loading states

 Code Quality:
- Reduced analyzer issues from 355 to 344
- Better memory management and state cleanup
- Improved type safety and null handling
- Enhanced documentation and code organization

 Technical Improvements:
- APK size: 55.87 MB (optimized)
- 68 Dart files, 26,218 lines of code
- Production-ready release build
- Comprehensive error handling and logging

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,13 @@ analyze_output.txt
 
 # Local properties
 android/local.properties
+
+# Environment variables and API credentials
+.env
+.env.local
+.env.production
+.env.development
+
+# IGDB/API credentials (never commit these!)
+**/igdb_credentials.dart
+**/api_keys.dart
